# cmask

./: README.md
Examples/: AXA1  DOORS  PCHSH  PCHSHDYN  PCHSHRND  PCHTIM.ORC  PCHTIMRN  PERC  PERC.ORC  TEXTURE1  TEXTURE1.ORC  TIMSTR  TIMSTRGP  TIMSTRRN  WHISPER.ORC
examples/: axa1.orc  bells  bells.orc  doors.orc  pchsh.orc  pchshrn2  pchtim  run_example.sh  texture  texture.orc  timstr.orc  timstrdn  timstrdr  timstrrp  whisper
source/: CMakeLists.txt  cmask.cpp  event.h  fileio.cpp  gen.cpp  globals.h  items.cpp  mask.cpp  parser.cpp  parser.h  quant.cpp  tables.cpp  utils.cpp  utils.h
